# NovaPostBot

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_AUTOTEST.md  CODEX_AUTOTEST2.md  CODEX_AUTOTEST3.md  CODEX_AUTOTEST4.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codex-review.yml  release.yml  rollback.yml
app/: config.py  jobs.py  logging_config.py  main.py  worker.py
app/bot/: __init__.py  dispatcher.py  filters.py  middlewares.py  notify.py  permissions.py  screen.py  services.py  states.py  types.py
app/db/: base.py  mixins.py  types.py
app/novaposhta/: __init__.py  cache.py  client.py  exceptions.py  mapping.py  methods.py  schemas.py  tracking.py
app/services/: account_team.py  address.py  bootstrap.py  client_settings.py  client_sheet_sync.py  clients.py  duty.py  (+16 more)
docs/: 01-overview.md  02-architecture.md  03-roles-permissions.md  04-warehouse-sheets.md  05-flows-client.md  06-flows-manager.md  07-flows-owner-dev.md  08-notifications-tracking-returns.md  09-novaposhta-api.md  10-support-duty.md  COMMERCIAL-PROPOSAL.md  ROADMAP.md  phase2-stepan-brief.md  phase3-stepan-brief.md
migrations/: env.py  script.py.mako
scripts/: intake_apps_script.gs  provision_sheets.py
tests/: conftest.py  test_account_team.py  test_address_search.py  test_bootstrap.py  test_client_settings.py  test_client_sheet_sync.py  test_clients.py  test_config.py  test_crypto.py  test_dates.py  test_delete_client.py  test_duty.py  test_hard_delete_scope.py  test_inventory.py  test_inventory_summary.py  test_inventory_summary_db.py  test_jobs.py  test_notifications.py  test_novaposhta_cache.py  test_novaposhta_client.py  test_novaposhta_mapping.py  test_novaposhta_methods.py  test_permissions.py  test_phone.py  test_pricing.py  test_provision_attach.py  test_reports.py  test_repositories.py  test_sender_profile.py  test_sheets_read_rows.py  test_shipment_create.py  test_shipments.py  test_sla.py  test_staff.py  test_stats.py  test_stock_source.py  test_support.py  test_support_repository.py  test_timefmt.py  test_tracking.py  (+2 more)
(+108 files in other folders)
